# graphrag

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
docs/: README.md  embeddings.md  graphrag_pipeline.md  llm.md  services.md
docs/asd_language_intervention/: aac_guideline_multimodal_combo.md  aac_guideline_pecs_foundation.md  aac_guideline_tablet_scene_based.md  assessment_profile_morning_circle.md  assessment_profile_play_based.md  assessment_profile_snack_routine.md  data_sheet_aac_usage_progression.md  data_sheet_joint_attention_progression.md  data_sheet_request_progression.md  fct_plan_attention_seeking.md  fct_plan_sensory_escape.md  fct_plan_transition_resistance.md  goal_bank_functional_communication_set3.md  goal_bank_receptive_expressive_set1.md  goal_bank_social_pragmatic_set2.md  ndbi_plan_esdm_block_play.md  ndbi_plan_joint_attention_outdoor.md  ndbi_plan_pmt_snack.md  prompt_fading_aac_usage.md  prompt_fading_joint_attention.md  prompt_fading_requesting_sequence.md  reinforcement_generalization_help_request.md  reinforcement_generalization_play.md  reinforcement_generalization_social.md  session_script_grocery_roleplay.md  session_script_peer_conversation.md  session_script_story_request.md
docs/asd_support/: README.md  bip_template.md  case_library.md  classroom_environment_checklist.md  deescalation_manual.md  family_communication_templates.md  fba_guide.md  incident_abc_template.md  pbis_mtss_tiers.md  safety_crisis_protocol.md  trigger_checklist.md
scripts/: bootstrap.sh
(+39 files in other folders)
