[project]
name = "local-graphrag"
version = "0.1.0"
description = "Local environment scaffold for GraphRAG experiments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "graphrag>=0.2.1",
    "qdrant-client>=1.8.0",
    "neo4j>=5.16.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.6.4",
    "typer>=0.12.3",
    "transformers>=4.39.0",
    "accelerate>=0.28.0",
    "sentence-transformers>=2.6.0",
    "torch>=2.2.0",
    "huggingface-hub>=0.20.3",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "uvicorn[standard]>=0.27.1",
    "fastapi>=0.110.0",
    "ruamel.yaml>=0.18.6"
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.0",
    "ruff>=0.2.2"
]

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
